--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body bgcolor="#FFEFD5" vlink="#0000FF">
     <table width="30%" cellspacing="0" align="center">
         <tr>
-            <th><font face="comic sans ms" size="+2"><a href="" title="Главная">Главнаяn</a></font></th>
+            <th><font face="comic sans ms" size="+2"><a href="" title="Главнаяn">Главная</a></font></th>
             <th><font face="comic sans ms" size="+2"><a href="" title="Мечети">Мечети</a></font></th>
             <th><font face="comic sans ms" size="+2"><a href="" title="Игры">Игры</a></font></th>
         </tr>
