--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Сайт Мансура</title>
-    <meta charset="utf-8">
-
-</head>
-<body bgcolor="#FFEFD5" vlink="#0000FF">
-    <table width="30%" cellspacing="0" align="center">
-        <tr>
-            <th><font face="comic sans ms" size="+2"><a href="" title="Главнаяn">Главная</a></font></th>
-            <th><font face="comic sans ms" size="+2"><a href="" title="Мечети">Мечети</a></font></th>
-            <th><font face="comic sans ms" size="+2"><a href="" title="Игры">Игры</a></font></th>
-        </tr>
-    </table>
-    <hr color="#0B0B61" width="70%">
-</body>
-</html>
+<iframe width="640" height="480" src="https://rtsp.me/embed/9S5NdhyE/" frameborder="0" allowfullscreen></iframe>
