--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="container header-content">
-            <img src="logo.png" alt="Логотип" class="logo">
+            <img src="./photo/LOGO.png" alt="Логотип" class="logo">
             <h1>Онлайн расчет арболитовых блоков</h1>
         </div>
     </header>
